--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,8 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Syncopate');
+
+img {
+    width: 100%;
+    object-fit: cover;
+}
